@@ -6,9 +6,22 @@ lift
 
 1. use intellij-ic9.0 in ubuntu10.4
 
-2. git为显示加上颜色 
+2、git为显示加上颜色
 $ git config color.(branch|diff|interactive|status) auto，
 或者$ git config color.ui true
+
+3、firefox plugin
+https://addons.mozilla.org/zh-CN/firefox/addon/398
+
+4、idea vm
+-Xms256m
+-Xmx512m
+-XX:MaxPermSize=256m
+-ea
+-server
+-XX:-UseParallelGC
+
+5、idea 开发lift，采用jetty:run debug 方式，修改代码后，需手工编译
 
 2010.05.08
 -----------
